# fnmatch-regex-rs

./: .editorconfig  Cargo.toml  NEWS.md  README.md
src/: error.rs  glob.rs  lib.rs  try_flatten.rs
src/tests/: glob.rs  mod.rs
